--- a/config.toml
+++ b/config.toml
@@ -69,19 +69,24 @@ description = "Luscinia Enterprises Assn. is a BC Registered nonprofit under the
   subtitle = "We have created the ideal pipeline for educational reinforcement algorithms."
 
     [[params.section2.features]]
-    title = "Powerful and unified interface"
-    text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis."
+    title = "Assess"
+    text = "When a student logs in for the first time, a profile is generated including our proprietary learning styles assessment. This generates a cross-curricular baseline of their individual learning style and helps the algorithm determine where to start their studies."
     icon = "laptop-globe"
 
     [[params.section2.features]]
-    title = "Cross-device synchronisation"
-    text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis."
+    title = "Analyze"
+    text = "Resources are further analysed and a fit is determined with students. Students will be served the best fitting resources within the teachers selection and their response is taken as feedback for both themselves and the resource."
     icon = "doc-sync"
 
     [[params.section2.features]]
-    title = "Nomad system"
-    text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis."
+    title = "Adjust"
+    text = "As students complete resources, our algorithm determines their response and will dynamically adjust the profile for each to eventually determine the best fit for each in terms of learning style."
     icon = "mobile-feed"
+    
+    [[params.section2.features]]
+    title = "Improve"
+    text = "As more resources and students are processed, the algorithm is tuned to different categories of student and resource. This algorithmic tuning ensures that students are always served the most relevant resources and allows us to give feedback to teachers and parents on general performance."
+    icon = "laptop-globe"
 
   [params.section3]
   title = "Aristotle Education Platform"
