--- a/config.toml
+++ b/config.toml
@@ -16,6 +16,7 @@ disableKinds = [
 [params]
 openGraph = true
 description = "Luscinia Enterprises Assn. is a BC Registered nonprofit under the Societies Act. Luscinia aims to provide enhanced access to education technologies"
+section4 = false
 
   [params.navbarlogo]
   image = "logos/lea.svg"
@@ -89,28 +90,6 @@ description = "Luscinia Enterprises Assn. is a BC Registered nonprofit under the
   image = "illustrations/mockups/aristotle-mockup.png"
   buttonText = "Visit the Alpha"
   buttonLink = "https://aristotle.luscinia.ca"
-
-  [params.section4]
-  title = "Meet the team"
-  subtitle = "Luscinia is run by a team of dedicated post-secondary students located across Canada."
-
-    [[params.section4.clients]]
-    name = "Jacob Chun"
-    quote = "As the CFO, I am responsible for all matters related to financial planning, accounting records, and long-term investment positions. Partnering with our CTO, we have secured numerous grants over the years from corporations such as Microsoft, Google, and Twilio. In addition to financials, I work as a development lead on full stack web services and maintaining our proprietary resource service API."
-    job = "Treasurer & CFO"
-    img = 1.0
-
-    [[params.section4.clients]]
-    name = "Varun Patel"
-    quote = "As the Chair of the Board of Directors and CTO, I work with various teams within Luscinia to develop our product stack and maintain our technological advancements. I am responsible for the development of the Aristotle Education Platform as a whole as well as maintaining the entire online presence of Luscinia Enterprises Association. I also work in the administrative functions of Luscinia's Board of Directors."
-    job = "Chair of the Board & CTO"
-    img = 2.0
-
-    [[params.section4.clients]]
-    name = "Jerry Xu"
-	  quote = "As the lead engineer for Aristotle’s resource services, I spearhead the development of our AI that actively responds to individual performance to serve personalized lesson plans. I am also responsible for creating communicative services that interact between users and our databases, leveraging new technologies to create dynamic experiences for both the company and our users."
-    job = "API Development Lead"
-    img = 3.0
 	
   [params.footer]
   logo = "lea.svg"
